--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,11 +15,10 @@ variables:
 
 steps:
 - task: UseDotNet@2
-  displayName: Install .NET 6 sdk
+  displayName: Install .NET 8 sdk
   inputs:
-    packageType: sdk
-    version: 6.0.x
-    installationPath: $(Agent.ToolsDirectory)/dotnet
+    packageType: 'sdk'
+    version: '8.0.x'
 
 - task: DotNetCoreCLI@2
   displayName: 'restore'
